# secureai-deepfake-detection

./: .dockerignore  .gitignore  .gitmodules  0.1.1  0.17.2  0.4.0  1.1.0  2.20.0  2.5.0  404.html  AGENTS.md  ALL_SECURITY_FIXES_COMPLETE.md  API_Documentation.md  APPLY_CUDA_FIX_SERVER.md  AWS_IAM_USER_CREATE_STEPS.md  Administrator_Guide.md  BEST_MODEL_ON_PLANET.md  BEST_MODEL_WITHOUT_LAANET.md  Blockchain_Quick_Start.md  CHECK_README_FOR_LINKS.md  CI_FIXES_SUMMARY.md  COMPLETE_DEPLOYMENT_GUIDE.md  CONFIGURE_S3_ENV.md  CUDA_FIX_IMPLEMENTATION_COMPLETE.md  Compliance_Assessment_Tool.py  DEEPFAKE_VS_MORPHEUS_EXPLAINED.md  DOWNLOAD_LAANET_WEIGHTS.md  Dockerfile  ENSEMBLE_DETECTOR_SETUP.md  FINAL_SETUP_COMPLETE.md  FINAL_STATUS.md  FIX_INSTALLATION_ISSUES.md  FIX_PGADMIN_SQL_ERROR.md  FIX_S3_CREDENTIALS.md  FIX_UPLOADS_MOUNT.md  FIX_YT_DLP_VENV.md  FORCE_REBUILD_JETSON_FIX.md  GET_STARTED_DEPLOYMENT.md  GITHUB_PUSH_COMPLETE.md  GOOGLE_SITES_DNS_SETUP.md  (+178 more)
.github/: codeql-config.yml
.well-known/: security.txt
8090 Updates/: api_schemas.py
API_DOCUMENTATION/: index.html
DEPLOYMENT_GUIDE/: index.html
ORGANIZE_DOCS/: index.html
Pricing_and_Licensing/: Pricing_Model.md  SLA_Template.md
Support_Infrastructure/: Escalation_Procedures.md  Help_Desk_System.md
Training_Materials/: Administrator_Training.md  Certification_Program.md  Customer_Onboarding_Guide.md  Quick_Reference_Guide.md  Support_Team_Training.md
ai_model/: aistore_integration.py  detect.py  (+15 more)
blockchain/programs/secure-ai-detector/: Cargo.toml
blockchain/programs/secure-ai-detector/src/: lib.rs
(+1050 files in other folders)
