[package]
name = "secure-ai-detector"
version = "0.1.0"
description = "SecureAI Deepfake Detector"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "secure_ai_detector"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"